# UrsaR

./: CMakeLists.txt
cmake/: FindORC.cmake  dep.cmake  utils.cmake
examples/: connected_component.cc  hello_world.cc  kmeans.cc  lr.cc  pr.cc  read.cc  word_count.cc
scripts/: check_stat.py  clang-format.py  cpplint.py  lint.py  pstart.py  pstop.py  scheduler.py  submit-job.py
test/: has_filesystem.cc
ursa/base/: bin_stream.h  file_utils.h  macros.h  numeric_utils.h  properties.h  properties_reader.h  shard.h  tokenizer.h  utils.h
ursa/base/subprocess/: subprocess.h
ursa/common/: closure.h  comm_env.h  completed_task_info.h  constants.h  data_memory_record.h  data_store.h  engine.h  event_actor.h  flags.h  has_method.h  instance_id.h  instance_id_collection.h  job_desc.h  job_driver.h  job_logger.h  job_simulator.h  local_task.h  local_task_graph.h  resource_pack.h  resource_predictor.h  resource_release.h  resource_request.h  resource_usage_estimator.h  sharded_source_data.h  sharded_task.h  sharded_task_graph.h  simulation_job_logger.h  source_data.h  subgraph.h  task.h  task_base.h  task_context.h  task_dependency.h  task_graph.h  timer.h  worker_info.h  worker_status_update_info.h
ursa/common/dataset/: abstract_data.h  abstract_dataset.h  dataset.h  dataset_partition.h  date_type.h  macro.h  partition.h  source_dataset.h  string_partition.h
ursa/common/io/: hdfs_utils.h
ursa/common/io/input/: file_splitter.h  hdfs_file_splitter.h  hdfs_input_block_info.h  input_block_assigner.h  input_block_info.h  input_block_info_cache.h  inputformat_helper.h  line_inputformat.h  nfs_file_splitter.h  nfs_input_block_info.h
ursa/common/io/input/orc/: orc_column_encoder.h  orc_file_splitter.h  orc_hdfs_file.h  orc_input_block_info.h  orc_raw_inputformat.h  orc_utils.h
ursa/common/task_desc/: channel_network_task_desc.h  disk_read_task_desc.h  hdfs_disk_read_task_desc.h  hdfs_network_task_desc.h  network_task_desc.h  task_desc.h  task_desc_wrapper.h
ursa/metadata/: metadata.h  sharded_metadata.h
